update proceedings